# mce-django-server

./: .coveralls.yml  .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  gunicorn_settings.py  manage.py  setup.cfg  setup.py
mce_django_server/: asgi.py  urls.py  wsgi.py
mce_django_server/locale/en/LC_MESSAGES/: django.po
mce_django_server/settings/: __init__.py  base.py  dev.py  doc.py  prod.py  test.py
mce_django_server/static/: staticfiles.json
mce_django_server/static/material/admin/css/: change_form.min.f0096a4d1cac.css
mce_django_server/templates/: bootstrap.html  home.html
traefik/: traefik.toml
