[metadata]
license_files = LICENSE

[bdist_wheel]
universal=0

[tool:pytest]
DJANGO_SETTINGS_MODULE = mce_django_server.settings.test
testpaths = tests/unit
addopts = -p no:warnings --strict-markers --no-migrations --reuse-db --cov=mce_django_server --cov-branch

[coverage:run]
source = mce_django_app

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[flake8]
max-line-length = 127

